--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,8 +36,7 @@
         android:textStyle="normal|bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/newNumber"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/newNumber"
-        tools:layout_editor_absoluteY="59dp" />
+        app:layout_constraintRight_toLeftOf="@+id/newNumber" />
 
     <EditText
         android:id="@+id/newNumber"
@@ -226,5 +225,14 @@
         android:text="="
         app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
         app:layout_constraintLeft_toRightOf="@+id/buttonDot" />
+
+    <Button
+        android:text="Neg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonNeg"
+        app:layout_constraintLeft_toLeftOf="@+id/button0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/button0" />
 
 </android.support.constraint.ConstraintLayout>
